--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,16 @@
 @import "tailwindcss";
 @plugin "daisyui";
+
+.roboto{
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+}
+.poppins{
+  font-family: "Poppins", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
+.lato{
+  font-family: "Lato", sans-serif;
+  font-style: normal;
+}
