--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,31 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
-.roboto{
+.roboto {
   font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
 }
-.poppins{
+
+.poppins {
   font-family: "Poppins", sans-serif;
   font-weight: 100;
   font-style: normal;
 }
-.lato{
+
+.lato {
   font-family: "Lato", sans-serif;
   font-style: normal;
+}
+
+@keyframes slideDown {
+  from {
+    transform: translateY(-100%);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+
+.animate-slideDown {
+  animation: slideDown 0.4s ease forwards;
 }
